Ensured a single h1, removed horizontal scroll, unified visual design from 320px to 767.9px

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .fa-solid {
@@ -702,7 +703,6 @@ footer {
 
   .searchContainer {
     width: 100%;
-    max-width: 377px;
   }
 
   .searchButton {
@@ -723,19 +723,22 @@ footer {
   }
 
   .filtersButtonsContainer {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px 10px;
+    /*335px = 162.5px pour chaque button (exigé par figma) * 2 + 10px de gap right / left*/
+    max-width: 335px;
+    align-self: center;
   }
 
   .filterButton {
     padding: 4px 19px;
     font-size: 14px;
     line-height: 16.44px;
-    width: 162.5px;
     justify-content: flex-start;
+    width: calc((100% - 10px) / 2);
+    justify-content: center;
   }
 
   .MainSecondSection {
@@ -753,6 +756,9 @@ footer {
     flex-direction: column;
     padding: 30px 20px;
     gap: 15px;
+  }
+  .imageContainer {
+    height: 224px;
   }
 
   .populairesCards {
@@ -793,13 +799,13 @@ footer {
   }
 
   .hebergementsCardsContainer a {
-    min-width: 250px;
-    max-width: 400px;
+    width: 100%;
+    max-width: 100%;
+    flex: auto;
   }
 
   .activityCards {
     gap: 15px;
-
     width: 100%;
     height: 100%;
     display: flex;
@@ -807,14 +813,8 @@ footer {
     justify-content: space-around;
   }
 
-  .activityCards a {
-    min-width: 240px;
-    max-width: 350px;
-    flex: 1 1 calc((100% - 30px) / 2);
-  }
-
   .activityCardImage {
-    height: 200px;
+    height: 224px;
   }
 
   .activityCardImage img {
@@ -833,22 +833,22 @@ footer {
     gap: 0px;
     max-width: 100%;
     justify-content: center;
-  }
-}
-
-@media (max-width: 547.98px) {
-  .filtersButtonsContainer {
-    justify-content: center;
-  }
-}
-
-@media (max-width: 500px) {
-  footer {
     flex-direction: column;
-    align-items: center;
+  }
+  .footerSection {
+    width: max-content;
+  }
+}
+
+
+
+@media (max-width: 400px) {
+  .imageContainer {
+    height: 124px;
+    transition: all 0.3s ease;
   }
 
-  .footerSection {
-    width: 100%;
+  .activityCardImage {
+    height: 200px;
   }
 }
